# UntrustedValue

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-plz.toml  rust-toolchain.toml
.github/workflows/: ci.yaml  release-plz.yml
examples/: sanitize_trait.rs  sanitize_with.rs
src/: lib.rs
untrusted_value/: CHANGELOG.md  Cargo.toml
untrusted_value/examples/: sanitize_trait.rs  sanitize_with.rs  untrusted_func_inputs.rs  untrusted_func_inputs_nested_structs.rs  untrusted_func_output.rs  untrusted_inputs.rs  untrusted_inputs_nested_structs.rs  untrusted_outputs.rs  user_input_derive.rs  user_input_derive_nested_structs.rs
untrusted_value/examples/manual/: sanitize_trait.rs  sanitize_with.rs  untrusted_variant_nested_structs.rs  untrusted_variant_no_nesting.rs
untrusted_value/src/: lib.rs  maybe_untrusted.rs  untrusted_value.rs
untrusted_value_derive/: CHANGELOG.md  Cargo.toml
untrusted_value_derive/src/: lib.rs  require_tainting.rs  sanitize_value.rs  sanitize_with.rs  untrusted_inputs.rs  untrusted_output.rs  untrusted_variant.rs
untrusted_value_derive/src/internals/: into_untrusted_variant.rs  mod.rs  sanitize_value.rs  sanitize_with.rs
untrusted_value_derive_internals/: CHANGELOG.md  Cargo.toml  internals  lib.rs
untrusted_value_taint_checker/: Cargo.toml  README.md  build.rs
untrusted_value_taint_checker/sample/: Cargo.toml
untrusted_value_taint_checker/sample/src/: main.rs
untrusted_value_taint_checker/src/: args.rs  cargo.rs  lib.rs  main.rs  output.rs  rustc.rs
untrusted_value_taint_checker/src/analysis/: build_plan.rs  callbacks.rs  invocation_environment.rs  taint_problem.rs  taint_source.rs
untrusted_value_taint_checker/src/analysis/hir/: crate_function_finder.rs
untrusted_value_taint_checker/src/analysis/mir/: data_flow.rs  data_flow_checker.rs
untrusted_value_taint_checker/src/analysis/taint_source/: generated.tpl  std.json
