[package]
name = "untrusted_value_derive"
version = "0.1.1"
edition = "2021"
readme = "../README.md"
keywords = ["security", "sanitization", "validation"]
license = "MIT"
homepage = "https://github.com/0xCCF4/UntrustedValues"
repository = "https://github.com/0xCCF4/UntrustedValues"
documentation = "https://docs.rs/untrusted_value_derive"
description = """This crate aim to provide a type-safe way to handle and sanitize potentially untrusted values
like user input."""

[lib]
proc-macro = true

[dependencies]
syn = "2.0.71"
quote = "1.0.36"

[dev-dependencies]
untrusted_value = { version = "0", path = "../untrusted_value" }
