[package]
name = "untrusted_value_derive"
version = "0.3.3"
edition = "2021"
readme = "../README.md"
keywords = ["security", "sanitization", "validation", "taint", "static-analyis"]
license = "MIT"
homepage = "https://github.com/0xCCF4/UntrustedValue"
repository = "https://github.com/0xCCF4/UntrustedValue"
documentation = "https://docs.rs/untrusted_value_derive"
description = """This crate aim to provide a type-safe way to handle and sanitize potentially untrusted values
like user input."""

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.71", features = ["full", "visit"] }
quote = "1.0.36"
proc-macro2 = "1.0.86"

[dev-dependencies]
untrusted_value = { version = "0", path = "../untrusted_value" }

[features]
harden_sanitize = []
default = []
