[package]
name = "untrusted_value_derive_internals"
version = "0.2.3"
edition = "2021"
readme = "../README.md"
keywords = ["security", "sanitization", "validation", "taint", "static-analyis"]
license = "MIT"
homepage = "https://github.com/0xCCF4/UntrustedValue"
repository = "https://github.com/0xCCF4/UntrustedValue"
documentation = "https://docs.rs/untrusted-value_derive_internals"
description = """This crate aim to provide a type-safe way to handle and sanitize potentially untrusted values
like user input."""

[lib]
path = "lib.rs"

[dev-dependencies]
untrusted_value = { version = "0", path = "../untrusted_value" }
